# sistemioperativi

./: CMakeLists.txt
Esame/: master-template.c  single-process.c  validate-c-step-4.sh  worker-template.c
Esame/C/: master-1.c  master-2.c  master-3.c  validate-c-step-1.sh  validate-c-step-2.sh  validate-c-step-3.sh  worker-1  worker-1.c  worker-2.c  worker-3.c
Esame/Shell/: shell_validator.sh
Esecizi/file/: nonblocking  nonblocking.c
Esecizi/fork/: foster  foster.c  highestn  highestn.c  parallel  parallel.c  shell  shell.c  zombie  zombie.c
Esecizi/pipes/: guess  guess.c  rps  rps.c  rpsnp.c
Esecizi/shared memory/: exercise-1  exercise-1.c  exercise-2  exercise-2.c
Esecizi/shell/: disk_space.sh  prova.sh  renaming_util.sh
Esecizi/signals/: alarm  alarm.c  primeMP.c  test  test.c  warmup  warmup.c
Laboratorio/1 - Compilazione e linking-20260309/: 42-v1.c  42-v2.c
Laboratorio/10 - Laboratorio shared memory e pipe-20260423/: exercise-1-template.txt  solution-1.txt  solution-2.txt  solution-4.txt
Laboratorio/11 - Laboratorio pipe e named pipe-20260614/: mkfifo-client-example  mkfifo-client-example.c  mkfifo-server-example  mkfifo-server-example.c  solution-1.c  solution-2-client.c  solution-2-server.c
Laboratorio/11 - Laboratorio socket-20260423/: concurrent_server.txt  guess-race-socket-client.txt  guess-race-socket-server.txt
Laboratorio/12 - File control-20260430/: 02a-blocking-read.c  04-async-producer.c  05-dup2.c  06-file_lock_exclusive_advisory.c  07-blocking-server.c  07-nonblocking-server.c  07-poll-client.c
Laboratorio/12 - Laboratorio socket-20260423/: concurrent_client.txt  guess-race-socket-client  guess-race-socket-server
Laboratorio/13 - File control-20260430/: 01-sparse-file.c  02b-nonblocking-read.c  03a-blocking-write.c  03b-nonblocking-write.c  04-async-consumer.c  06-file_lock_shared_advisory.c  07-poll-server.c
Laboratorio/13 - Laboratorio file control-20260429/: blocking-client.c  blocking-server.c
Laboratorio/14 - Altri esercizi simili allesame-20260518/: audioactive.c  server.c  template.c
Laboratorio/14 - Laboratorio file control-20260429/: blocking-client  blocking-server
Laboratorio/2- System calls-20260309/: helloworld.s  helloworld_syscall.c  readstdin.c  writetofile.c
Laboratorio/3 - Processi-20260309/: CMakeLists.txt  fork_example  fork_example.c  fork_example_2  fork_example_2.c  multiple_fork  multiple_fork.c  process_tree  process_tree.c  wait_example  wait_example.c
Laboratorio/3 - Processi-20260309/ese/: es1  es1.c  es2  es2.c  es3  es3.c  es4  es4.c  es5  es5.c
Laboratorio/4 - Laboratorio fork and friends - possibili soluzioni-20260423/: solution_1.c.md  solution_2.c.md  solution_3.c.md  solution_4.txt  solution_5  solution_5.txt
Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/: 01-variabili.txt  02-malloc.txt  02b-malloc-pfn.txt  03-file-write.txt  04-file-read.txt  05-file-seek.txt  06-file-after-fork.txt  07-buffered-io.txt  08-return-exit.txt  09-exit-_exit.txt  10-fork-exit-_exit.txt  11-atexit.txt  12-fork-atexit.txt
Laboratorio/6 - IPC - Segnali-20260319/: 00-neverending-process.c  01-TERMinator.c  02-signal-sender.c  03-handler-signal.c  04-handler-sigaction.c  05-sigprocmask.c  06-sa-mask.c  07-raise.c  08-alarm.c
Laboratorio/7 - Laboratorio segnali-20260319/: exercise-3  exercise-3.c  exercise4  exercise4.c  race_rand  race_rand.c  race_rr  race_rr.c  warmup  warmupA  warmupA.c  warmupB  warmupB.c
Laboratorio/8 - IPC - shared memory-20260423/: 01-anonymous-shm  01-anonymous-shm.c  02-anonymous-producer-consumer  02-anonymous-producer-consumer.c  02-anonymous-producer-consumer.txt  03-shm-consumer  03-shm-consumer.c  03-shm-producer  03-shm-producer.c  README.txt
Laboratorio/9 - IPC-pipe-20260423/: 01-pipe  01-pipe.c  01-pipe.txt  02-pipe-reader-blocked  02-pipe-reader-blocked.c  02-pipe-reader-blocked.txt  03-pipe-writer-blocked  03-pipe-writer-blocked.c  04a-pipe-sigpipe.txt  04b-pipe-sigpipe.txt  05-pipe-ring  05-pipe-ring.txt  06-pipe-star  06-pipe-star.txt  07-pipe-struct.txt  08-mkfifo-receiver.txt  08-mkfifo-sender.txt  09-sock-client.txt  09-sock-server.txt
Laboratorio/Shell/Dati per esercizi-20260604/: horse_breeds.csv  partridge_in_a_pear_tree.txt  word_list.txt
Laboratorio/Shell/Soluzioni esercizi proposti-20260604/: solution_2_1.sh  solution_2_2.sh  solution_2_3.sh  solution_3_1.sh  solution_3_2.sh  solution_3_3.sh  solution_4_1.sh  solution_4_2.sh  solution_4_3.sh  solution_5_1.sh  solution_5_2.sh  solution_5_3.sh  solution_5_4.sh  solution_6_1.sh  solution_6_2.sh  solution_6_3.sh  validator_6_3.sh
Simulaizoni Esame/Materiale per lesercizio in C-20260604/: log-pipe.c  log-shm-summary.c  log-shm.c  template.c  validate-step-1.sh  validate-step-2.sh  validate-step-3.sh
Simulaizoni Esame/Simulazione esercizio shell/: validate.sh
Simulaizoni Esame/validator/: palle.sh  validate.sh
Simulaizoni Esame/validator/expected_outputs/: bad_ip.csv  bad_prefix.csv  output.txt  ssh.ip
