cmake_minimum_required(VERSION 4.2)
project(sistemioperativi)

set(CMAKE_CXX_STANDARD 14)

add_executable(sistemioperativi
        Esecizi/fork/highestn
        Esecizi/fork/highestn.c
        Esecizi/signals/alarm
        Esecizi/signals/alarm.c
        Esecizi/signals/prime.c
        Esecizi/signals/primeMP.c
        Esecizi/signals/test
        Esecizi/signals/test.c
        Esecizi/signals/warmup
        Esecizi/signals/warmup.c
        "Laboratorio/1 - Compilazione e linking-20260309/42-v1.c"
        "Laboratorio/1 - Compilazione e linking-20260309/42-v2.c"
        "Laboratorio/10 - Laboratorio shared memory e pipe-20260423/exercise-1-template.txt"
        "Laboratorio/10 - Laboratorio shared memory e pipe-20260423/solution-1.txt"
        "Laboratorio/10 - Laboratorio shared memory e pipe-20260423/solution-2.txt"
        "Laboratorio/10 - Laboratorio shared memory e pipe-20260423/solution-4.c"
        "Laboratorio/11 - Laboratorio socket-20260423/concurrent_client.txt"
        "Laboratorio/11 - Laboratorio socket-20260423/concurrent_server.txt"
        "Laboratorio/11 - Laboratorio socket-20260423/guess-race-socket-client.txt"
        "Laboratorio/11 - Laboratorio socket-20260423/guess-race-socket-server.txt"
        "Laboratorio/12 - File control-20260430/01-sparse-file.c"
        "Laboratorio/12 - File control-20260430/02a-blocking-read.c"
        "Laboratorio/12 - File control-20260430/02b-nonblocking-read.c"
        "Laboratorio/12 - File control-20260430/03a-blocking-write.c"
        "Laboratorio/12 - File control-20260430/03b-nonblocking-write.c"
        "Laboratorio/12 - File control-20260430/04-async-consumer.c"
        "Laboratorio/12 - File control-20260430/04-async-producer.c"
        "Laboratorio/12 - File control-20260430/05-dup2.c"
        "Laboratorio/12 - File control-20260430/06-file_lock_exclusive_advisory.c"
        "Laboratorio/12 - File control-20260430/06-file_lock_shared_advisory.c"
        "Laboratorio/12 - File control-20260430/07-blocking-server.c"
        "Laboratorio/12 - File control-20260430/07-nonblocking-server.c"
        "Laboratorio/12 - File control-20260430/07-poll-client.c"
        "Laboratorio/12 - File control-20260430/07-poll-server.c"
        "Laboratorio/13 - Laboratorio file control-20260429/blocking-client.c"
        "Laboratorio/13 - Laboratorio file control-20260429/blocking-server.c"
        "Laboratorio/14 - Altri esercizi simili allesame-20260518/1-pipe-shm.pdf"
        "Laboratorio/14 - Altri esercizi simili allesame-20260518/2-socket-fifo-segnali.pdf"
        "Laboratorio/14 - Altri esercizi simili allesame-20260518/3-pipe-poll.pdf"
        "Laboratorio/14 - Altri esercizi simili allesame-20260518/audioactive.c"
        "Laboratorio/14 - Altri esercizi simili allesame-20260518/server.c"
        "Laboratorio/14 - Altri esercizi simili allesame-20260518/template.c"
        "Laboratorio/2- System calls-20260309/empty.c"
        "Laboratorio/2- System calls-20260309/helloworld.c"
        "Laboratorio/2- System calls-20260309/helloworld.s"
        "Laboratorio/2- System calls-20260309/helloworld_syscall.c"
        "Laboratorio/2- System calls-20260309/readstdin.c"
        "Laboratorio/2- System calls-20260309/writetofile.c"
        "Laboratorio/3 - Processi-20260309/cmake-build-debug/Testing/Temporary/LastTest.log"
        "Laboratorio/3 - Processi-20260309/cmake-build-debug/build.ninja"
        "Laboratorio/3 - Processi-20260309/cmake-build-debug/cmake_install.cmake"
        "Laboratorio/3 - Processi-20260309/cmake-build-debug/CMakeCache.txt"
        "Laboratorio/3 - Processi-20260309/cmake-build-debug/compile_commands.json"
        "Laboratorio/3 - Processi-20260309/ese/es1"
        "Laboratorio/3 - Processi-20260309/ese/es1.c"
        "Laboratorio/3 - Processi-20260309/ese/es2"
        "Laboratorio/3 - Processi-20260309/ese/es2.c"
        "Laboratorio/3 - Processi-20260309/ese/es3"
        "Laboratorio/3 - Processi-20260309/ese/es3.c"
        "Laboratorio/3 - Processi-20260309/ese/es4"
        "Laboratorio/3 - Processi-20260309/ese/es4.c"
        "Laboratorio/3 - Processi-20260309/ese/es5"
        "Laboratorio/3 - Processi-20260309/ese/es5.c"
        "Laboratorio/3 - Processi-20260309/CMakeLists.txt"
        "Laboratorio/3 - Processi-20260309/fork_example"
        "Laboratorio/3 - Processi-20260309/fork_example.c"
        "Laboratorio/3 - Processi-20260309/fork_example_2"
        "Laboratorio/3 - Processi-20260309/fork_example_2.c"
        "Laboratorio/3 - Processi-20260309/multiple_fork"
        "Laboratorio/3 - Processi-20260309/multiple_fork.c"
        "Laboratorio/3 - Processi-20260309/process_tree"
        "Laboratorio/3 - Processi-20260309/process_tree.c"
        "Laboratorio/3 - Processi-20260309/wait_example"
        "Laboratorio/3 - Processi-20260309/wait_example.c"
        "Laboratorio/4 - Laboratorio fork and friends - possibili soluzioni-20260423/solution_1.c.md"
        "Laboratorio/4 - Laboratorio fork and friends - possibili soluzioni-20260423/solution_2.c.md"
        "Laboratorio/4 - Laboratorio fork and friends - possibili soluzioni-20260423/solution_3.c.md"
        "Laboratorio/4 - Laboratorio fork and friends - possibili soluzioni-20260423/solution_4.txt"
        "Laboratorio/4 - Laboratorio fork and friends - possibili soluzioni-20260423/solution_5.c"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/01-variabili.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/02-malloc.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/02b-malloc-pfn.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/03-file-write.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/04-file-read.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/05-file-seek.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/06-file-after-fork.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/07-buffered-io.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/08-return-exit.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/09-exit-_exit.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/10-fork-exit-_exit.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/11-atexit.txt"
        "Laboratorio/5 - Fork, corner cases and weird behaviors-20260423/12-fork-atexit.txt"
        "Laboratorio/6 - IPC - Segnali-20260319/00-neverending-process.c"
        "Laboratorio/6 - IPC - Segnali-20260319/01-TERMinator.c"
        "Laboratorio/6 - IPC - Segnali-20260319/02-signal-sender.c"
        "Laboratorio/6 - IPC - Segnali-20260319/03-handler-signal.c"
        "Laboratorio/6 - IPC - Segnali-20260319/04-handler-sigaction.c"
        "Laboratorio/6 - IPC - Segnali-20260319/05-sigprocmask.c"
        "Laboratorio/6 - IPC - Segnali-20260319/06-sa-mask.c"
        "Laboratorio/6 - IPC - Segnali-20260319/07-raise.c"
        "Laboratorio/6 - IPC - Segnali-20260319/08-alarm.c"
        "Laboratorio/7 - Laboratorio segnali-20260319/exercise-3"
        "Laboratorio/7 - Laboratorio segnali-20260319/exercise-3.c"
        "Laboratorio/7 - Laboratorio segnali-20260319/exercise4"
        "Laboratorio/7 - Laboratorio segnali-20260319/exercise4.c"
        "Laboratorio/7 - Laboratorio segnali-20260319/race_rand"
        "Laboratorio/7 - Laboratorio segnali-20260319/race_rand.c"
        "Laboratorio/7 - Laboratorio segnali-20260319/race_rr"
        "Laboratorio/7 - Laboratorio segnali-20260319/race_rr.c"
        "Laboratorio/7 - Laboratorio segnali-20260319/warmup"
        "Laboratorio/7 - Laboratorio segnali-20260319/warmup.c"
        "Laboratorio/7 - Laboratorio segnali-20260319/warmupA"
        "Laboratorio/7 - Laboratorio segnali-20260319/warmupA.c"
        "Laboratorio/7 - Laboratorio segnali-20260319/warmupB"
        "Laboratorio/7 - Laboratorio segnali-20260319/warmupB.c"
        "Laboratorio/8 - IPC - shared memory-20260423/01-anonymous-shm.c"
        "Laboratorio/8 - IPC - shared memory-20260423/02-anonymous-producer-consumer.c"
        "Laboratorio/8 - IPC - shared memory-20260423/03-shm-consumer.c"
        "Laboratorio/8 - IPC - shared memory-20260423/03-shm-producer.c"
        "Laboratorio/8 - IPC - shared memory-20260423/README.txt"
        "Laboratorio/9 - IPC-pipe-20260423/01-pipe.c"
        "Laboratorio/9 - IPC-pipe-20260423/02-pipe-reader-blocked.c"
        "Laboratorio/9 - IPC-pipe-20260423/03-pipe-writer-blocked.c"
        "Laboratorio/9 - IPC-pipe-20260423/04a-pipe-sigpipe.txt"
        "Laboratorio/9 - IPC-pipe-20260423/04b-pipe-sigpipe.txt"
        "Laboratorio/9 - IPC-pipe-20260423/05-pipe-ring.c"
        "Laboratorio/9 - IPC-pipe-20260423/06-pipe-star.c"
        "Laboratorio/9 - IPC-pipe-20260423/07-pipe-struct.c"
        "Laboratorio/9 - IPC-pipe-20260423/08-mkfifo-receiver.c"
        "Laboratorio/9 - IPC-pipe-20260423/08-mkfifo-sender.c"
        "Laboratorio/9 - IPC-pipe-20260423/09-sock-client.txt"
        "Laboratorio/9 - IPC-pipe-20260423/09-sock-server.txt"
        "Laboratorio/Shell/Dati per esercizi-20260604/access.log"
        "Laboratorio/Shell/Dati per esercizi-20260604/horse_breeds.csv"
        "Laboratorio/Shell/Dati per esercizi-20260604/partridge_in_a_pear_tree.txt"
        "Laboratorio/Shell/Dati per esercizi-20260604/word_list.txt"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_2_1.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_2_2.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_2_3.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_3_1.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_3_2.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_3_3.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_4_1.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_4_2.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_4_3.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_5_1.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_5_2.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_5_3.sh"
        "Laboratorio/Shell/Soluzioni esercizi proposti-20260604/solution_5_4.sh"
        "Laboratorio/Lab1 - SO-Lab-fork.pdf"
        "Laboratorio/Lab2 - SO-Fork-corner-cases.pdf"
        "Laboratorio/Lab3 - SO-Lab-signal.pdf"
        "Laboratorio/Lab4 - SO-Lab-shm-pipe.pdf"
        "Laboratorio/Lab5 - SO-Lab-pipe-named-pipe.pdf"
        "Laboratorio/Lab6 - SO-Lab-socket.pdf"
        "Laboratorio/Lab7 - SO-Lab-file-control.pdf"
        "Simulaizoni Esame/Materiale per lesercizio in C-20260604/sample.log"
        "Simulaizoni Esame/Materiale per lesercizio in C-20260604/template.c"
        "Simulaizoni Esame/Materiale per lesercizio in C-20260604/validate-step-1.sh"
        "Simulaizoni Esame/Materiale per lesercizio in C-20260604/validate-step-2.sh"
        "Simulaizoni Esame/Materiale per lesercizio in C-20260604/validate-step-3.sh"
        "Simulaizoni Esame/Simulazione esercizio shell/simulation2.pdf"
        "Simulaizoni Esame/Simulazione esercizio shell/validate.sh"
        "Simulaizoni Esame/validator/expected_outputs/bad_ip.csv"
        "Simulaizoni Esame/validator/expected_outputs/bad_prefix.csv"
        "Simulaizoni Esame/validator/expected_outputs/output.txt"
        "Simulaizoni Esame/validator/expected_outputs/ssh.ip"
        "Simulaizoni Esame/validator/expected_outputs/web.ip"
        "Simulaizoni Esame/validator/access.log"
        "Simulaizoni Esame/validator/auth.log"
        "Simulaizoni Esame/validator/validate.sh"
        "Simulaizoni Esame/simulazione_A.pdf"
        "Teoria/1 - SO-Introduction-to-os.pdf"
        "Teoria/2 - SO-Operating_systems_services.pdf"
        "Teoria/3 - SO-Processes.pdf"
        "Teoria/4 - SO-Virtual-Filesystem.pdf"
        "Teoria/5 - SO-Inter-Process-Communication.pdf"
        "Teoria/6 - SO-File-control.pdf"
        "Teoria/7 - SO_Memory.pdf"
        "Teoria/8 - SO_Boot.pdf"
        "Teoria/9 - SO_Mass_storage.pdf"
        "Teoria/S1 - SO-Shell1.pdf"
        "Teoria/S2 - SO-Shell2.pdf"
        "Teoria/S3 - SO-Shell3.pdf"
        "Teoria/S4 - SO-Shell4.pdf"
        "Teoria/S5 - SO-Shell5.pdf"
        "Teoria/S6 - SO-Shell6.pdf"
        Teoria/SO-Intro.pdf
        OS_new.png
        Esecizi/fork/highestn.c
        Esecizi/fork/foster.c
        Esecizi/fork/foster.c
        Esecizi/fork/zombie.c
        Esecizi/fork/parallel.c
        Esecizi/fork/shell.c
        Esecizi/fork/shell.c
        "Laboratorio/8 - IPC - shared memory-20260423/02-anonymous-producer-consumer.c"
        "Esecizi/shared memory/exercise-2.c"
        Esecizi/pipes/guess.c
        Esecizi/pipes/rps.c
        Esecizi/pipes/rpsnp.c
        Esecizi/file.c
        Esecizi/file/nonblocking.c
        "Simulaizoni Esame/Materiale per lesercizio in C-20260604/log-pipe.c"
        "Simulaizoni Esame/Materiale per lesercizio in C-20260604/log-shm.c"
        "Simulaizoni Esame/Materiale per lesercizio in C-20260604/log-shm-summary.c"
        Esame/C/master-2.c
        Esame/C/worker-2.c
        Esame/C/master-3.c
        Esame/C/worker-3.c
)
